dev/pgvector/ingress-route-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pgvector-tcp
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`pgvector.local`)
      services:
        - name: pgvector
          port: 5432
